src/test/deca/codegen/invalid/improvided/AbsenceReturn.ass.attendu
Erreur: La méthode ne retourne rien
